# gaming-analytics

./: .env.example  .gitignore  README.md  orchestrator.py  pyproject.toml
legacy/sae-data-s4/: .gitignore  README.md  pyproject.toml
legacy/sae-data-s4/scripts/globalSteamUsers/: insert_into_db.py
legacy/sae-data-s4/scripts/mysql/: create_db.py  db_connection.py  fetch_steam_games.py  insert_into_db.py  launch_steam_scraper.sh
legacy/sae-data-s4/scripts/steamdb/: fetch_steam_dbdata.py  insert_steamdb_data_into_db.py  test.py
legacy/sae-data-s4/scripts/twitchtracker/: fetch_twitchtracker_game.py  insert_twitchData_into_bd.py  launch_twitchtracker_scraper.sh  steamappid_from_db.py  twitchtracker.py
src/: config.py  fetch_data.py  load_bronze.py  main.py  transform.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/models/marts/: bridge_game_category.sql  bridge_game_developer.sql  bridge_game_genre.sql  dim_category.sql  dim_date.sql  dim_developer.sql  dim_games.sql  dim_genre.sql  fct_twitch_data.sql  marts.yml
transform/models/staging/: src_bronze.yml  stg_gaming.yml  stg_steam.sql  stg_twitch.sql
