[project]
name = "gaming-analytics"
version = "0.1.0"
description = "An ELT data pipeline focusing on the correlation between Steam market trends and Twitch viewership."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
